@@ -1,3 +1,7 @@
+* Enhancements
+
+  * You can pass identity rules as procs that take record1 and record2 in their original forms (note they should return nil if not sure)
+
 2.0.1 / 2013-06-06
 
 * Bug fixes
